crates/analyzer/tests/snapshots/errors__return_call_to_fn_with_param_type_mismatch.snap
---
source: crates/analyzer/tests/errors.rs
assertion_line: 295
expression: "error_string(&path, test_files::fixture(path))"
---
error: incorrect type for `foo` argument at position 0
  ┌─ compile_errors/return_call_to_fn_with_param_type_mismatch.fe:7:20
  │
7 │         return foo(100)
  │                    ^^^ this has type `u256`; expected type `bool`


